fix vertical alignment for resized buttons

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -17,9 +17,10 @@
   border: none;
 
   > :first-child {
+    align-items: center;
     border: none;
     border-radius: 4px;
-    display: block;
+    display: flex;
     font-size: 14px;
     height: auto;
     padding: 12px 24px;
